Fix deployment issues with components not showing

--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  opacity: 100%;
+  opacity: 0%;
   transition: opacity 150ms;
   align-items: center;
 }
